# aws_rekognition_parser

./: .gitignore  README.md  setup.cfg
src/aws_rekognition_parser_pkg/: aws_rekognition_parser.py
