[metadata]
name = aws_rekognition_parser
version = 0.0.1
author = x21120501
description = AWS Rekognition output parser for receipt text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/x21120501/aws_rekognition_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
